modify app.json to heroku deploy

--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
-  "keywords": ["node", "express", "heroku"],
+  "name": "Start on Heroku: Scrapy",
+  "description": "A scrapy script on heroku",
+  "repository": "https://github.com/ujway/heroku-scrapy",
+  "keywords": ["heroku", "scrapy", "python"],
   "image": "heroku/nodejs"
 }
